--- a/public/pages/forgot-password.html
+++ b/public/pages/forgot-password.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Set up a new password for PC PrepKit</title>
+    <title>{{title}}</title>
     <!-- 
     The style block is collapsed on page load to save you some scrolling.
     Postmark automatically inlines all CSS properties for maximum email client 
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body style="height: 100%; margin: 0; line-height: 1.4; background-color: #F2F4F6; color: #74787E; -webkit-text-size-adjust: none; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; width: 100%;">
-    <span class="preheader" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; visibility: hidden; mso-hide: all; font-size: 1px; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; display: none;">Use this link to reset your password. The link is only valid for 24 hours.</span>
+    <span class="preheader" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; visibility: hidden; mso-hide: all; font-size: 1px; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; display: none;">{{preHeader}}</span>
     <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; width: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #F2F4F6;" bgcolor="#F2F4F6">
       <tr>
         <td align="center" style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">
@@ -32,7 +32,7 @@
             <tr class="header" style="text-align: center;" align="center">
               <td class="email-masthead" style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; padding: 25px 0; text-align: center;" align="center">
                 <a href="http://{{host}}" style="color: #3869D4; text-decoration: none; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">
-                  <span class="header-1 text-center" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; color: #3F51B5; font-weight: 900; font-size: 30px;">PC Prep</span><span class="header-2 text-center" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; color: #B71234; font-weight: 900; font-size: 30px;">Kit</span>
+                  <span class="header-1 text-center" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; color: #3F51B5; font-weight: 900; font-size: 30px;">{{brandTitle1}}</span><span class="header-2 text-center" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; color: #B71234; font-weight: 900; font-size: 30px;">{{brandTitle2}}</span>
                 </a>
               </td>
             </tr>
@@ -43,8 +43,8 @@
                   <!-- Body content -->
                   <tr>
                     <td class="content-cell" style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
-                      <h1 style="margin-top: 0; color: #2F3133; font-size: 19px; font-weight: bold; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">Hi {{name}},</h1>
-                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">You recently requested to reset your password for your PC PrepKit account. Use the button below to reset it. <strong style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">This password reset is only valid for the next 24 hours.</strong></p>
+                      <h1 style="margin-top: 0; color: #2F3133; font-size: 19px; font-weight: bold; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{greeting}} {{name}},</h1>
+                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{textContent1}}<strong style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{textContent2}}</strong></p>
                       <!-- Action -->
                       <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; width: 100%; margin: 30px auto; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center;">
                         <tr>
@@ -57,7 +57,7 @@
                                   <table border="0" cellspacing="0" cellpadding="0" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">
                                     <tr>
                                       <td style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">
-                                        <a href="http://{{host}}/auth/reset/{{token}}" class=" button  button--green " target="_blank" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; display: inline-block; color: #FFF; border-radius: 3px; box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16); -webkit-text-size-adjust: none; background-color: #22BC66; border-top: 10px solid #22BC66; border-right: 18px solid #22BC66; border-bottom: 10px solid #22BC66; border-left: 18px solid #22BC66; text-decoration: none;">Reset your password</a>
+                                        <a href="http://{{host}}/auth/reset/{{token}}" class=" button  button--green " target="_blank" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; display: inline-block; color: #FFF; border-radius: 3px; box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16); -webkit-text-size-adjust: none; background-color: #22BC66; border-top: 10px solid #22BC66; border-right: 18px solid #22BC66; border-bottom: 10px solid #22BC66; border-left: 18px solid #22BC66; text-decoration: none;">{{callToAction}}</a>
                                       </td>
                                     </tr>
                                   </table>
@@ -67,14 +67,14 @@
                           </td>
                         </tr>
                       </table>
-                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">If you did not request a password reset, please ignore this email or <a href="{{support_url}}" style="color: #3869D4; text-decoration: none; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">contact support</a> if you have questions.</p>
-                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">Thanks,
-                        <br>The Peace Corps Team</p>
+                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{textContent3}} <a href="{{support_url}}" style="color: #3869D4; text-decoration: none; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{textContent4}}</a> {{textContent5}}</p>
+                      <p style="margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">{{signatureGreet}}
+                        <br>{{signatureSignOff}}</p>
                       <!-- Sub copy -->
                       <table class="body-sub" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; margin-top: 25px; padding-top: 25px; border-top: 1px solid #EDEFF2;">
                         <tr>
                           <td style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box;">
-                            <p class="sub" style="margin-top: 0; color: #74787E; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; font-size: 12px;">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
+                            <p class="sub" style="margin-top: 0; color: #74787E; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; font-size: 12px;">{{footerText1}}</p>
                             <p class="sub" style="margin-top: 0; color: #74787E; line-height: 1.5em; text-align: left; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; font-size: 12px;">{{action_url}}</p>
                           </td>
                         </tr>
@@ -89,7 +89,7 @@
                 <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; width: 570px; margin: 0 auto; padding: 0; -premailer-width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center;">
                   <tr>
                     <td class="content-cell" align="center" style="word-break: break-word; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
-                      <p class="sub align-center" style="margin-top: 0; line-height: 1.5em; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; text-align: center; color: #AEAEAE; font-size: 12px;">&copy; 2017 PC PrepKit. All rights reserved.</p>
+                      <p class="sub align-center" style="margin-top: 0; line-height: 1.5em; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; box-sizing: border-box; text-align: center; color: #AEAEAE; font-size: 12px;">&copy; {{footerText2}}</p>
                     </td>
                   </tr>
                 </table>
