--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
     };
 
   </script>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
